--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 2.0.0)
+Config/testthat/edition: 2
+Imports: 
+    forcats
